--- a/PSO.ipynb
+++ b/PSO.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation of Particle Swarm Optimization Algorithm\n",
+    "Here we have implemented the particle swarm optimization and have tested it for two functions (minimizing one and maximizing the other)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 252,
    "metadata": {},
@@ -16,6 +24,15 @@
     "\n",
     "np.set_printoptions(precision=15)\n",
     "mp.dps = 100\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first function, `f`, is introduced below, and we are going to find its maximum point.\n",
+    "\n",
+    "![f](./f.jpg)"
    ]
   },
   {
@@ -59,6 +76,16 @@
     "contours = plt.contour(x, y, z, 10, colors='black', alpha=0.4)\n",
     "plt.clabel(contours, inline=True, fontsize=8, fmt=\"%.0f\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the second function, `g`, we are looking for its minimum point.\n",
+    "\n",
+    "![g_formula](./g_formula.jpg)\n",
+    "![g_fig](./g_fig.jpg)"
    ]
   },
   {
@@ -111,6 +138,16 @@
     "contours = plt.contour(x, y, z, 10, colors='black', alpha=0.4)\n",
     "plt.clabel(contours, inline=True, fontsize=8, fmt=\"%.0f\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algorithm\n",
+    "Basically, we are going to initiate several points named `particles` and move them around our search space until we find a reasonable optimum. Particles move based on their own best point and the entire swarm's best point.\n",
+    "\n",
+    "First, we initiate the `X` variable that stores particles coordinates and `V` that indicates the next movement of each particle. "
    ]
   },
   {
@@ -180,6 +217,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In each iteration, particles update their coordinates based on the best point found by themselves and the whole group. Then they would update their best points.\n",
+    "\n",
+    "The algorithm for calculating their movement has been implemented here. As you could see it is based on the previous velocity, the best location of the particle and the best location of the group. We control the effect of each of them with `w`, `c1`, and `c2`, respectively. These hyperparameters indicate the level of exploration and exploitation. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 257,
    "metadata": {},
@@ -244,6 +290,16 @@
     "\twritergif = PillowWriter(fps=30)\n",
     "\tanim.save(name, writer=writergif)\n",
     "\tplt.close(fig)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test\n",
+    "For function `f`, we reached a good maximum in `(-8.055012133422395, -9.664602184004176)` and the maximum was `19.20850256515979`.\n",
+    "\n",
+    "You can see the movement of particles in the figure below."
    ]
   },
   {
@@ -378,6 +434,17 @@
    "metadata": {},
    "source": [
     "![pso_f](./PSO_f.gif?id=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For function `g`, we reached this minimum was a challenge, and I had to change my parameters several times. Also, because of the significant changes in the function output, I had to have a higher precision in calculating the function.\n",
+    "\n",
+    "I reached `-11649893728439109678099.82134597309785543885194833766451576245450253110461253031718007042838938695909` in `(-19.84994187980684, 62.360431583785534)` point.\n",
+    "\n",
+    "You can see the movement of particles in the figure below."
    ]
   },
   {
